add do-restclient module work on DOCloudClient

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>tcdop-server</module>
         <module>tcdop-util</module>
         <module>tc-digitalocean-plugin</module>
+        <module>do-restclient</module>
     </modules>
 
     <name>tc-digitalocean-plugin</name>
