--- a/tc-digitalocean-plugin/pom.xml
+++ b/tc-digitalocean-plugin/pom.xml
@@ -27,6 +27,11 @@
             <artifactId>tcdop-util</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>io.cyberstock</groupId>
+            <artifactId>do-restclient</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
