--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,19 @@
         <repository>
             <id>OSS Snapshot repository</id>
             <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+            <snapshots>true</snapshots>
+        </repository>
+
+        <repository>
+            <id>beolnix-releases</id>
+            <name>releases repo</name>
+            <url>http://nexus.beolnix.com/content/repositories/releases/</url>
+        </repository>
+        <repository>
+            <id>beolnix-snapshots</id>
+            <name>snapshots repo</name>
+            <url>http://nexus.beolnix.com/content/repositories/snapshots/</url>
+            <snapshots>true</snapshots>
         </repository>
     </repositories>
 
