--- a/tcdop-api/pom.xml
+++ b/tcdop-api/pom.xml
@@ -4,7 +4,7 @@
 
     <parent>
         <groupId>io.cyberstock</groupId>
-        <artifactId>tcdop-mommy</artifactId>
+        <artifactId>tcdop</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
