--- a/tcdop-util/pom.xml
+++ b/tcdop-util/pom.xml
@@ -16,6 +16,10 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.jetbrains.teamcity</groupId>
+            <artifactId>tests-support</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
