--- a/tcdop-common/pom.xml
+++ b/tcdop-common/pom.xml
@@ -8,7 +8,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>tcdop-api</artifactId>
+    <artifactId>tcdop-common</artifactId>
     <packaging>jar</packaging>
 
 
