--- a/pom.xml
+++ b/pom.xml
@@ -8,9 +8,10 @@
     <packaging>pom</packaging>
 
     <modules>
-        <module>tcdop-common</module>
+        <module>tcdop-model</module>
         <module>tcdop-server</module>
         <module>tcdop-util</module>
+        <module>tcdop-dioc-adapter</module>
         <module>tc-digitalocean-plugin</module>
     </modules>
 
@@ -31,12 +32,17 @@
         <!-- set env variable $TEAMCITY_HOME or change this property to actual path to TeamCity distr home -->
         <teamcity.home.path>${env.TEAMCITY_HOME}</teamcity.home.path>
         <teamcity-version>9.0.1</teamcity-version>
+
+        <!-- versions -->
         <spring-test.version>4.0.5.RELEASE</spring-test.version>
         <do.restclient.version>2.1-SNAPSHOT</do.restclient.version>
+        <guava.version>18.0</guava.version>
 
+        <!-- build settings -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.build.timestamp.format>yyyyMMddHHmmss</maven.build.timestamp.format>
 
+        <!-- plugin signature properties -->
         <plugin.config.vendorName>cyberstock.io</plugin.config.vendorName>
         <plugin.config.vendorUrl>http://cyberstock.io</plugin.config.vendorUrl>
         <plugin.config.email>atmakin.dv@gmail.com</plugin.config.email>
@@ -88,7 +94,19 @@
             <dependency>
                 <groupId>com.myjeeva.digitalocean</groupId>
                 <artifactId>digitalocean-api-client</artifactId>
-                <version>${do.restclient.version}</version>
+                <version>${do.restclient.version}</version><exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-api</artifactId>
+                </exclusion>
+            </exclusions>
+
+            </dependency>
+
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>${guava.version}</version>
             </dependency>
 
             <dependency>
