--- a/tcdop-dioc-adapter/pom.xml
+++ b/tcdop-dioc-adapter/pom.xml
@@ -8,10 +8,11 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>tcdop-util</artifactId>
+    <artifactId>tcdop-dioc-adapter</artifactId>
     <packaging>jar</packaging>
 
     <dependencies>
+
         <dependency>
             <groupId>io.cyberstock</groupId>
             <artifactId>tcdop-model</artifactId>
@@ -22,16 +23,10 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
         </dependency>
-
-        <dependency>
-            <groupId>org.jetbrains.teamcity</groupId>
-            <artifactId>cloud-interface</artifactId>
-        </dependency>
         <dependency>
             <groupId>org.jetbrains.teamcity</groupId>
             <artifactId>tests-support</artifactId>
         </dependency>
-
     </dependencies>
 
 </project>
