--- a/tcdop-model/pom.xml
+++ b/tcdop-model/pom.xml
@@ -8,8 +8,16 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>tcdop-common</artifactId>
+    <artifactId>tcdop-model</artifactId>
     <packaging>jar</packaging>
+
+    <dependencies>
+        <!-- Digital Ocean rest client -->
+        <dependency>
+            <groupId>com.myjeeva.digitalocean</groupId>
+            <artifactId>digitalocean-api-client</artifactId>
+        </dependency>
+    </dependencies>
 
 
 </project>
