--- a/tcdop-server/pom.xml
+++ b/tcdop-server/pom.xml
@@ -39,6 +39,10 @@
         <!-- teamcity dependencies -->
         <dependency>
             <groupId>org.jetbrains.teamcity</groupId>
+            <artifactId>web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.jetbrains.teamcity</groupId>
             <artifactId>server-api</artifactId>
         </dependency>
         <dependency>
@@ -65,6 +69,41 @@
             <artifactId>guava</artifactId>
         </dependency>
     </dependencies>
+
+    <profiles>
+        <profile>
+            <id>dev-build</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <build>
+                <resources>
+                    <resource>
+                        <directory>src/main/resources</directory>
+                    </resource>
+                    <resource>
+                        <directory>src/main/resources-dev</directory>
+                    </resource>
+                </resources>
+            </build>
+        </profile>
+        <profile>
+            <id>prod-build</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+            <build>
+                <resources>
+                    <resource>
+                        <directory>src/main/resources</directory>
+                    </resource>
+                    <resource>
+                        <directory>src/main/resources-prod</directory>
+                    </resource>
+                </resources>
+            </build>
+        </profile>
+    </profiles>
 
 
 </project>
