--- a/tcdop-agent/pom.xml
+++ b/tcdop-agent/pom.xml
@@ -8,11 +8,10 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>tcdop-dioc-adapter</artifactId>
+    <artifactId>tcdop-agent</artifactId>
     <packaging>jar</packaging>
 
     <dependencies>
-
         <dependency>
             <groupId>io.cyberstock</groupId>
             <artifactId>tcdop-model</artifactId>
@@ -20,13 +19,23 @@
         </dependency>
 
         <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-context</artifactId>
+            <groupId>org.jetbrains.teamcity</groupId>
+            <artifactId>cloud-shared</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.jetbrains.teamcity</groupId>
+            <artifactId>agent-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
         <dependency>
             <groupId>org.jetbrains.teamcity</groupId>
             <artifactId>tests-support</artifactId>
+            <scope>test</scope>
         </dependency>
+
+
     </dependencies>
 
 </project>
