--- a/tc-digitalocean-plugin/pom.xml
+++ b/tc-digitalocean-plugin/pom.xml
@@ -23,7 +23,7 @@
         </dependency>
         <dependency>
             <groupId>io.cyberstock</groupId>
-            <artifactId>tcdop-common</artifactId>
+            <artifactId>tcdop-model</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
