--- a/pom.xml
+++ b/pom.xml
@@ -149,6 +149,14 @@
 
             <dependency>
                 <groupId>org.jetbrains.teamcity</groupId>
+                <artifactId>server</artifactId>
+                <version>${teamcity-version}</version>
+                <scope>system</scope>
+                <systemPath>${teamcity.home.path}/webapps/ROOT/WEB-INF/lib/server.jar</systemPath>
+            </dependency>
+
+            <dependency>
+                <groupId>org.jetbrains.teamcity</groupId>
                 <artifactId>server-web-api</artifactId>
                 <version>${teamcity-version}</version>
                 <type>war</type>
