--- a/tc-digitalocean-plugin/pom.xml
+++ b/tc-digitalocean-plugin/pom.xml
@@ -71,7 +71,7 @@
                 </executions>
                 <configuration>
                     <file>${basedir}/src/main/server-config/teamcity-plugin.xml</file>
-                    <outputFile>${basedir}/target/teamcity-plugin.xml</outputFile>
+                    <outputFile>${basedir}/target/server-config/teamcity-plugin.xml</outputFile>
                     <replacements>
                         <replacement>
                             <token>@Name@</token>
