--- a/pom.xml
+++ b/pom.xml
@@ -224,9 +224,35 @@
                     <version>5.1</version>
                 </plugin>
                 <plugin>
-                    <groupId>org.codehaus.groovy</groupId>
-                    <artifactId>groovy</artifactId>
-                    <version>2.4.4</version>
+                    <groupId>org.codehaus.gmaven</groupId>
+                    <artifactId>gmaven-plugin</artifactId>
+                    <version>1.5</version>
+                    <configuration>
+                        <providerSelection>1.8</providerSelection>
+                    </configuration>
+                    <executions>
+                        <execution>
+                            <goals>
+                                <goal>generateStubs</goal>
+                                <goal>compile</goal>
+                                <goal>testCompile</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>2.12.2</version>
+                    <configuration>
+                        <systemPropertyVariables>
+                            <failIfNoTests>true</failIfNoTests>
+                            <includes>
+                                <include>**/*Test*.*</include>
+                            </includes>
+                            <jacoco-agent.destfile>target/jacoco.exec</jacoco-agent.destfile>
+                        </systemPropertyVariables>
+                    </configuration>
                 </plugin>
             </plugins>
         </pluginManagement>
@@ -255,6 +281,10 @@
                 <version>2.12.2</version>
                 <configuration>
                     <systemPropertyVariables>
+                        <failIfNoTests>true</failIfNoTests>
+                        <includes>
+                            <include>**/*Test*.*</include>
+                        </includes>
                         <jacoco-agent.destfile>target/jacoco.exec</jacoco-agent.destfile>
                     </systemPropertyVariables>
                 </configuration>
