refactoring: transform DOUtils to DOAdapter

--- a/tcdop-server/src/main/resources/tcdop.properties
+++ b/tcdop-server/src/main/resources/tcdop.properties
@@ -1,2 +1,4 @@
 tcdop.internalFixedThreadpool.size=4
 tcdop.imageStorage.init.threashold=90000
+tcdop.dititalocean.actionCheck.interval=2000
+tcdop.dititalocean.actionCheck.threshold=1200000
