--- a/int-tests/pom.xml
+++ b/int-tests/pom.xml
@@ -8,6 +8,8 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
+    <name>Integration tests</name>
+
     <artifactId>int-tests</artifactId>
     <packaging>jar</packaging>
 
@@ -54,6 +56,12 @@
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
             <version>6.8</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.jcraft</groupId>
+            <artifactId>jsch</artifactId>
+            <version>0.1.53</version>
         </dependency>
 
 
