--- a/tc-digitalocean-plugin/pom.xml
+++ b/tc-digitalocean-plugin/pom.xml
@@ -107,20 +107,20 @@
                 <artifactId>maven-assembly-plugin</artifactId>
                 <version>2.4</version>
                 <executions>
-                    <execution>
-                        <id>make-agent-assembly</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>single</goal>
-                        </goals>
-                        <configuration>
-                            <finalName>tcdop-agent</finalName>
-                            <appendAssemblyId>false</appendAssemblyId>
-                            <descriptors>
-                                <descriptor>src/main/assembly/plugin-agent-assembly.xml</descriptor>
-                            </descriptors>
-                        </configuration>
-                    </execution>
+                    <!--<execution>-->
+                        <!--<id>make-agent-assembly</id>-->
+                        <!--<phase>package</phase>-->
+                        <!--<goals>-->
+                            <!--<goal>single</goal>-->
+                        <!--</goals>-->
+                        <!--<configuration>-->
+                            <!--<finalName>tcdop-agent</finalName>-->
+                            <!--<appendAssemblyId>false</appendAssemblyId>-->
+                            <!--<descriptors>-->
+                                <!--<descriptor>src/main/assembly/plugin-agent-assembly.xml</descriptor>-->
+                            <!--</descriptors>-->
+                        <!--</configuration>-->
+                    <!--</execution>-->
                     <execution>
                         <id>dist-assembly</id>
                         <phase>package</phase>
