--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,7 @@
         <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
         <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
         <sonar.language>java</sonar.language>
+        <sonar-maven-plugin.version>2.7.1</sonar-maven-plugin.version>
     </properties>
 
     <repositories>
@@ -262,7 +263,7 @@
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>sonar-maven-plugin</artifactId>
-                    <version>5.1</version>
+                    <version>${sonar-maven-plugin.version}</version>
                 </plugin>
 
                 <plugin>
