--- a/tcdop-ssh-client/pom.xml
+++ b/tcdop-ssh-client/pom.xml
@@ -8,7 +8,8 @@
         <version>0.2-SNAPSHOT</version>
     </parent>
 
-    <name>Docker driver</name>
+    <name>SSH client</name>
+    <description>SSH client module. It is used if the interaction with droplet is required.</description>
 
     <artifactId>tcdop-ssh-client</artifactId>
     <packaging>jar</packaging>
