--- a/tcdop-ssh-client/pom.xml
+++ b/tcdop-ssh-client/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>io.cyberstock</groupId>
         <artifactId>tcdop</artifactId>
-        <version>0.2-SNAPSHOT</version>
+        <version>0.2</version>
     </parent>
 
     <name>SSH client</name>
